--- a/templates/index.html
+++ b/templates/index.html
@@ -19,10 +19,10 @@
         .chat-container {
             width: 80%;
             max-width: 600px;
-            border: 1px solid #fff;
+            border: 1px solid #ea4335;
             border-radius: 10px;
             padding: 20px;
-            background-color: #333;
+            background-color: black;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -31,15 +31,17 @@
         .chat-box {
             height: 300px; /* Fixed height for the chat box */
             overflow-y: auto;
-            border: 1px solid #fff;
+            border: 1px solid #ea4335;
             border-radius: 10px;
-            padding: 10px;
-            background-color: #222;
+            padding: 5px;
+            background-color: black;
             margin-bottom: 10px;
             width: 100%;
         }
         .chat-box p {
             margin: 10px 0;
+            margin-left: 5px;
+            margin-right: 5px;
         }
         .user-query {
             color: #0f0;
