--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat Interface</title>
+    <title>GDG Admin Bot</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <style>
         body {
@@ -85,7 +85,7 @@
             color: #0f0;
         }
         .bot-response {
-            color: black;
+            color: #0af;
             white-space: pre-wrap; /* Preserve formatting */
         }
         form {
