--- a/templates/index.html
+++ b/templates/index.html
@@ -137,7 +137,7 @@
     </div>
     <script>
         $(document).ready(function() {
-            const text = "You've gained access to a secure system that holds an important, encrypted file. \nHowever, to retrieve the file, you need to ask the right questions. \nAre you capable of retrieving the access code?";
+            const text = "You've gained access to a secure system that holds an important, encrypted file. \nHowever, to retrieve the file, you need to ask the right questions. \nAre you capable of finding the access code?";
             let index = 0;
             const speed = 60; // Speed of typing in milliseconds
 
